--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ plugins:
       minify_html: true
   - social:
       cards_layout_options:
-        background_color: "#06038D"
+        background_color: "#000000"
 
 nav:
   - Home: index.md
